2021-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement selected() and autoselect() in list item handles.

	* Specifying that list items, or menu options, are selected
	by default. Implement menu option radio groups (mutually
	exclusive).

2021-02-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* Replace radiogroup handles with opaque identifier strings.

2021-02-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the Unicode bi-directional algorithm for labels and
	input fields. Automatically load the environment locale by default.

2020-06-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* richtext/richtextmeta.C: Implement three-way comparison for
	richtextmeta.

2020-06-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/impl/element.H: rework the label hotpost logic to
	avoid creating hotspot links with a spurious trailing \0.

2020-06-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix rendering of modal shade color.

0.28

2020-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update the API to the C++20 revision.

	* Optimize container recalculation. Layout managers' destructor
	schedules container recalculation only when needed.

	* combo-boxes: fix resort_items().

	* pane layout manager: removing the only pane resulted in bad
	contents of the layout manager.

0.27

2020-05-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/dim_arg.H: gcc 10 update.

2020-05-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager: Home/End in a list navigation.

2020-05-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/shortcut.H: Improve shortcut labeling.

	* listlayoutmanager/list_element_impl.C: Rename get_item_layoutmanager()
	to submenu_listlayout(), for consistency.

2020-04-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* shortcut.C: Recognize "Enter" as a shortcut.

	* combo-box: more intelligent reporting on whether the Enter
	key did something, in a combo-box.
